Mon Mar  9 01:11:17 2009  Yusuke Endoh  <mame@tsg.ne.jp>

	* test/ruby/test_file_exhaustive.rb: add tests for File#size and
	  File.absolute_path.

Sun Mar  8 23:02:50 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* win32/Makefile.sub (LDFLAGS): always prepends -link.

Sun Mar  8 11:39:57 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (RUBY_CHECK_SIZEOF): dirty hack to compute multiple
	  sizeof, for apple's universal binary.

Sat Mar  7 22:06:03 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (universal_binary): checks if sizes are same on all
	  architectures.

Sat Mar  7 18:45:56 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in: checks if cd really succeeded.

Sat Mar  7 14:24:47 2009  Tanaka Akira  <akr@fsij.org>

	* configure.in: don't use CONFIG_SHELL for testing shell feature in
	  Makefile.

Sat Mar  7 14:07:31 2009  Tanaka Akira  <akr@fsij.org>

	* configure.in: fix the location of cdcmd.

Sat Mar  7 13:52:01 2009  Tanaka Akira  <akr@fsij.org>

	* configure.in: the shell which runs configure may be different from
	  the shell for make.  configure likes bash but Makefile specifies
	  SHELL=/bin/sh.

Sat Mar  7 12:31:30 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* test/erb/test_erb.rb: reverted space sensitive test results.

	* test/rdoc/test_rdoc_parser_c.rb: ditto.

	* test/rdoc/test_rdoc_ri_default_display.rb: ditto.

Fri Mar  6 23:35:59 2009  Tanaka Akira  <akr@fsij.org>

	* lib/securerandom.rb (SecureRandom.urlsafe_base64): add optional
	  argument to add padding.

Fri Mar  6 19:25:40 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (RUBY_LIB_VERSION_STYLE): sets full or minor style
	  not to show RUBY_VERSION_MAJOR and so on.

	* version.h (RUBY_LIB_VERSION): makes from RUBY_LIB_VERSION_STYLE.

	* configure.in, Makefile.in, win32/Makefile.sub (CHDIR): cd using
	  physical directory.

	* Makefile.in (update-mspec): split from update-rubyspec.
